# JARVIS-MARK-5

./: .gitignore  DISCORD_SETUP_GUIDE.md  README.md  brain_config.py  docker-setup.yml  jarvis.py  jarvis_desktop_automation.py  jarvis_discord_bot.py  jarvis_unified_voice.py  nginx.conf  pyrightconfig.json  requirements.txt  requirements_complete.txt  requirements_elevenlabs.txt  start-jarvis.bat
ENGINE/TTS/: ElevenLabs.py  edge_tts.py
MCP_SERVERS/: README.md  deep_research_mcp_server.py  image_processing_mcp_server.py  requirements.txt  start_mcp_servers.py  time_mcp_server.py  weather_mcp_server.py
RAVANA/: __init__.py  architecture_encoding.py  cleanup_session.py  evonet_base.py  evonet_evolution.py  integrate_with_jarvis.py  integration_complete.py  launch_conversational_ai.py  lightweight_ravana_jarvis.py  lightweight_snake_agent.py  main.py  material_generator.py  meta_law_inference.py  physics_cli.py  physics_experiment_prompts.py  requirements_ravana.txt  run_physics_tests.py  scae_benchmark.py  simple_integration.py
RAVANA/core/: .pylintrc  __init__.py  action_manager.py  (+19 more)
RAVANA/modules/information_processing/youtube_transcription/: __init__.py  audio_processor.py  pyproject.toml  transcriber.py  youtube_transcription.py
TOOLS/: Alpaca_DS_Converser.py  ProxyAPI.py  RawDog.py  TXT_DS_Converser.py  TimeComponents.py  TimeComponents_mod.py  Web_Results.py
config/: brain_config.json  config.json  jarvis_config.json
extensions/: github.py
nuclei-templates/: .checksum
web/: home.html  jarvis_clean_voice.html  jarvis_spider_exact.html  spider.html
(+144 files in other folders)
